Menu alignment fix

--- a/kat/kat/media/css/calendar.css
+++ b/kat/kat/media/css/calendar.css
@@ -41,7 +41,7 @@
 .current {
   float: left;
   border: 1px solid #999;
-  background-color: #ffb45f;
+  background-color: #ffd64f;
   width: 76px;
   height: auto;
   padding: 4px;
