--- a/kat/kat/media/css/style.css
+++ b/kat/kat/media/css/style.css
@@ -11,20 +11,17 @@
   font-family: "Arial Black";
   font-size: 32px;
   text-align: center;
-    padding-top: 20px;
   padding: 20px 20px 10px;
-float: none;
-    clear: both;
-
+  float: none;
+  clear: both;
 }
 
 .navbar-brand {
   font-family: "Arial Black";
   font-size: 26px;
   text-align: center;
-height: 100%;
-    min-height: 40px;
-
+  height: 100%;
+  min-height: 40px;
 }
 
 .navbar-login{
@@ -32,7 +29,7 @@ height: 100%;
   padding: 13px 0 0 0;
   clear: both;
   font-size: 12px;
-  margin-right: -15px;
+  /*margin-right: -15px;*/
 }
 
 .navbar-inner {
@@ -80,6 +77,10 @@ height: 100%;
   -webkit-border-radius: 0px;
      -moz-border-radius: 0px;
           border-radius: 0px;
+}
+
+.span9 {
+  margin-left: 0px;
 }
 
 body,html{
@@ -257,6 +258,32 @@ ul.noindent {
 
 .article-author {
   text-align: right;
+}
+
+.btn-primary {
+  color: #ffffff;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  background-color: #ffd64f;
+  background-image: -moz-linear-gradient(top, #ffd64f, #dd7a14);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffd64f), to(#dd7a14));
+  background-image: -webkit-linear-gradient(top, #ffd64f, #dd7a14);
+  background-image: -o-linear-gradient(top, #ffd64f, #dd7a14);
+  background-image: linear-gradient(to bottom, #ffd64f, #dd7a14);
+  background-repeat: repeat-x;
+  border-color: #ffd64f #dd7a14 #dd7a14;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffd64f', endColorstr='#ffdd7a14', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+}
+
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary:active,
+.btn-primary.active,
+.btn-primary.disabled,
+.btn-primary[disabled] {
+  color: #ffffff;
+  background-color: #dd7a14;
 }
 
 @media (max-width: 767px) {
